feat: database , eec